reverting flex container as everything broke